added input slider

--- a/asset-tracking-frontend/index.html
+++ b/asset-tracking-frontend/index.html
@@ -36,7 +36,8 @@
     <!-- <div class="notification">Logged in!!</div> -->
     <div id="search-and-filter"></div>
     <div class="filters drawer">
-      <!-- <i class="fas fa-chevron-up"></i> -->
+      <i class="fas fa-chevron-up"></i>
+      <i class="fas fa-chevron-down"></i>
       <form>
         <div class="input-grp-1">
         <div class="col-3 input-effect">
